--- a/index.html
+++ b/index.html
@@ -9,7 +9,25 @@
 </head>
 <body>
   
+  <main>
 
+    <div class="container">
+      <h1 class="main-title text-center">The Herbalist</h1>
+      <div class="main-box">
+        <div class="main-box__text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. A deleniti rerum quo, molestiae qui accusantium, aliquam vitae asperiores distinctio officia, voluptate animi corporis inventore illum. Earum, libero nisi veritatis sapiente praesentium totam! Itaque, pariatur! Obcaecati odit repellendus modi. Id commodi odio magnam accusantium sunt quas rem aperiam esse dignissimos officiis, illum voluptatem voluptate, cum iusto quasi perspiciatis. Ea totam vitae quibusdam corrupti animi voluptatibus nihil magnam sint repudiandae aliquid ipsum labore suscipit expedita deserunt, molestiae earum dignissimos non quidem eos! Repellendus, animi veniam autem sunt culpa maxime molestias repellat numquam esse, impedit amet ea nobis! Obcaecati eum voluptas eaque non.
+        </div>
+        <div class="main-box__options">
+          <div class="option">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum, fuga.</div>
+          <div class="option">Lorem, ipsum dolor.</div>
+          <div class="option">Lorem ipsum dolor sit amet.</div>
+          <div class="option">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
+        </div>
+      </div>
+    </div>
+
+
+  </main>
 
   <script src="app.js"></script>
 </body>
