--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
   <title>The Herbalist</title>
 </head>
 <body>
+  <header class="header">
+      <h1 class="main-title text-center">The Herbalist</h1> 
+  </header>
   
   <main>
-
     <div class="container">
-      <h1 class="main-title text-center">The Herbalist</h1>
       <div class="main-box">
         <div class="main-box__text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. A deleniti rerum quo, molestiae qui accusantium, aliquam vitae asperiores distinctio officia, voluptate animi corporis inventore illum. Earum, libero nisi veritatis sapiente praesentium totam! Itaque, pariatur! Obcaecati odit repellendus modi. Id commodi odio magnam accusantium sunt quas rem aperiam esse dignissimos officiis, illum voluptatem voluptate, cum iusto quasi perspiciatis. Ea totam vitae quibusdam corrupti animi voluptatibus nihil magnam sint repudiandae aliquid ipsum labore suscipit expedita deserunt, molestiae earum dignissimos non quidem eos! Repellendus, animi veniam autem sunt culpa maxime molestias repellat numquam esse, impedit amet ea nobis! Obcaecati eum voluptas eaque non.
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A deleniti rerum quo, molestiae qui accusantium, aliquam vitae asperiores distinctio officia, voluptate animi corporis inventore illum. Earum, libero nisi veritatis sapiente praesentium totam! Itaque, pariatur! Obcaecati odit repellendus modi. Id commodi odio magnam accusantium sunt quas rem aperiam esse dignissimos officiis, illum voluptatem voluptate, cum iusto quasi perspiciatis.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore voluptate incidunt alias beatae quibusdam eum dolores ipsam deleniti architecto? Tempore.</p>
         </div>
         <div class="main-box__options">
           <div class="option">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum, fuga.</div>
@@ -25,9 +27,11 @@
         </div>
       </div>
     </div>
-
-
   </main>
+
+  <footer class="footer">
+    <div class="copyright text-center">Built by <a href="https://github.com/Qusz" class="footer__link">Denis Gorchakov</a></div>
+  </footer>
 
   <script src="app.js"></script>
 </body>
