core logic skeleton

--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@
     <div class="container">
       <div class="main-box">
         <div class="main-box__text">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A deleniti rerum quo, molestiae qui accusantium, aliquam vitae asperiores distinctio officia, voluptate animi corporis inventore illum. Earum, libero nisi veritatis sapiente praesentium totam! Itaque, pariatur! Obcaecati odit repellendus modi. Id commodi odio magnam accusantium sunt quas rem aperiam esse dignissimos officiis, illum voluptatem voluptate, cum iusto quasi perspiciatis.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore voluptate incidunt alias beatae quibusdam eum dolores ipsam deleniti architecto? Tempore.</p>
         </div>
         <div class="main-box__options">
-          <div class="option">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum, fuga.</div>
-          <div class="option">Lorem, ipsum dolor.</div>
-          <div class="option">Lorem ipsum dolor sit amet.</div>
-          <div class="option">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
+          <!-- <div class="option"></div>
+          <div class="option"></div>
+          <div class="option"></div>
+          <div class="option"></div> -->
         </div>
       </div>
     </div>
@@ -33,6 +31,7 @@
     <div class="copyright text-center">Built by <a href="https://github.com/Qusz" class="footer__link">Denis Gorchakov</a></div>
   </footer>
 
-  <script src="app.js"></script>
+
+  <script src="app.js" type="module"></script>
 </body>
 </html>
