Implemented rough version of main logic

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
           <!-- <div class="option"></div>
           <div class="option"></div>
           <div class="option"></div>
-          <div class="option"></div> -->
+          <div class="option"></div>
+          <button class="btn btn-play">Play</button>
+          <button class="btn btn-continue">Continue</button>
         </div>
-      </div>
+      </div> -->
     </div>
   </main>
 
