Now the actual index of the current block is saved to local storage, not arbitrary block id. Plus renamed a few vars and improved comments

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </main>
 
   <footer class="footer">
-    <div class="copyright text-center">Built by <a href="https://github.com/Qusz" class="footer__link">Denis Gorchakov</a></div>
+    <div class="copyright text-center">Built by <a href="https://github.com/Qusz" class="footer__link" target="_blank">Denis Gorchakov</a></div>
   </footer>
 
 
