Changed the state logic

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="header">
-      <h1 class="main-title text-center">The Herbalist</h1> 
+      <h1 class="main-title text-center">Choose Your Own Adventure</h1> 
   </header>
   
   <main>
@@ -18,14 +18,8 @@
         <div class="main-box__text">
         </div>
         <div class="main-box__options">
-          <!-- <div class="option"></div>
-          <div class="option"></div>
-          <div class="option"></div>
-          <div class="option"></div>
-          <button class="btn btn-play">Play</button>
-          <button class="btn btn-continue">Continue</button>
         </div>
-      </div> -->
+      </div>
     </div>
   </main>
 
