--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
   </footer>
 
 
-  <script src="app.js" type="module"></script>
+  <script src="../js/app.js" type="module"></script>
 </body>
 </html>
