added start a new game button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1 class="main-title text-center">Choose Your Own Adventure</h1> 
   </header>
   
-  <main>
+  <main class="main">
     <div class="container">
       <div class="main-box">
         <div class="main-box__text">
@@ -28,6 +28,6 @@
   </footer>
 
 
-  <script src="../js/app.js" type="module"></script>
+  <script src="./js/app.js" type="module"></script>
 </body>
 </html>
