added new game modal

--- a/index.html
+++ b/index.html
@@ -14,13 +14,24 @@
   
   <main class="main">
     <div class="container">
-      <div class="main-box">
+      <section class="main-box">
         <div class="main-box__text">
         </div>
         <div class="main-box__options">
         </div>
-      </div>
+      </section>
     </div>
+
+    <section class="modal">
+      <div class="modal-content">
+        <h4>Are you sure? The current progress will be lost.</h4>
+        <div class="modal-buttons">
+          <button class="btn btn-modal-close">Cancel</button>
+          <button class="btn btn-modal-ok">Ok</button>
+        </div>
+      </div>
+    </section>
+    
   </main>
 
   <footer class="footer">
