--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="main.css">
-  <title>The Herbalist</title>
+  <title>CYAO</title>
 </head>
 <body>
   <header class="header">
-      <h1 class="main-title text-center">Choose Your Own Adventure</h1> 
+      <h1 class="main-title">Choose Your Own Adventure</h1> 
   </header>
   
   <main class="main">
     <div class="container">
       <section class="main-box">
-        <div class="main-box__text">
+        <div class="main-box-text">
         </div>
-        <div class="main-box__options">
+        <div class="main-box-options">
         </div>
       </section>
     </div>
@@ -35,7 +35,7 @@
   </main>
 
   <footer class="footer">
-    <div class="copyright text-center">Built by <a href="https://github.com/Qusz" class="footer__link" target="_blank">Denis Gorchakov</a></div>
+    <div class="copyright">Built by <a href="https://github.com/Qusz" class="footer-link" target="_blank">Denis Gorchakov</a></div>
   </footer>
 
 
